# tsync

./: .gitignore  LICENSE  README.md  mirror  pyproject.toml
src/mirror_sync/: __init__.py  cli.py
src/tsync/: __init__.py  cli.py
tests/: test_cli.py
