[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirror-sync"
version = "0.1.0"
description = "rsync wrapper to mirror files between local machine and remotes with push/pull workflow"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "jayghoshter" }
]
keywords = ["rsync", "sync", "mirror", "backup", "remote"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Mirroring",
    "Topic :: Utilities",
]

dependencies = [
    "rich>=13.0",
    "ruamel.yaml>=0.18",
    "deepdiff>=6.0",
    "python-magic>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
mirror-sync = "mirror_sync.cli:main"

[project.urls]
Homepage = "https://github.com/jayghoshter/mirror-sync"
Repository = "https://github.com/jayghoshter/mirror-sync"

[tool.hatch.build.targets.wheel]
packages = ["src/mirror_sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: tests that require rsync and filesystem operations",
]
